kubernetes/dashboard/dashboard_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
  labels:
    app: dashboard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: opa/dashboard_k8s:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8050
