kubernetes/dashboard/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
spec:
  defaultBackend:
    service:
      name: dashboard-service
      port:
        number: 8050
